Pequena alteração no html.
Colocadas ancoras nos itens de navegação.

--- a/index/index.html
+++ b/index/index.html
@@ -11,10 +11,10 @@
     <nav class="navbar">
         <h1 class="logo">Ink Manager</h1>
         <ul class="nav-items">
-            <li>Estoque</li>
-            <li>Custos</li>
-            <li>Orçamentos</li>
-            <li>Agendamentos</li>
+            <a href="#"><li>Estoque</li></a>
+            <a href="#"><li>Custos</li></a>
+            <a href="#"><li>Orçamentos</li></a>
+            <a href="#"><li>Agendamentos</li></a>
         </ul>
     </nav>
 
@@ -27,7 +27,7 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2024 InkManager. Todos os direitos reservados.</p>
+        <p>&copy; 2025 InkManager. Todos os direitos reservados.</p>
         <ul class="footer-items">
             <li>Ajuda</li>
             <li>Contato</li>
